--- a/style.css
+++ b/style.css
@@ -497,6 +497,7 @@
     }
     
     .input--contact {
+        outline: none;
         font-size: 1.4rem;
         font-weight: 500;
         border: none;
