--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
         display: flex;
     }
     
-    img {
+    .header-image {
         margin-bottom: 10px;
         display: block;
         margin-left: -200px;
