--- a/style.css
+++ b/style.css
@@ -553,9 +553,9 @@
     }
     
     .contacts--image {
-        display: flex;
+        /* display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center; */
         margin-top: 46px;
     }
     /* footer */
